[metadata]
name = abnf
description = Parsers for ABNF grammars.
long_description = ABNF generates parsers for ABNF grammars. Though intended for use with RFC grammars, ABNF should handle any valid grammar.
url = https://github.com/declaresub/abnf
author = Charles Yeomans
author_email = charles@declaresub.com
license = MIT
keywords = abnf, parser, generator
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Code Generators
    Topic :: Software Development :: Interpreters
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
platforms = any

[options]
package_dir=
    = src
packages=find:

python_requires = >=3.8
zip_safe = False
bdist_wheel = universal:1
[options.packages.find]
where=src
[options.package_data]
abnf =
    py.typed
